[package]
name = "f2"
version = "0.1.0"
authors = ["Lucemans <luc@lucemans.nl>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "f2"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
esp-idf-hal = "0.44.1"
esp-idf-sys = { version = "0.35.0", features = ["binstart"] }
st7789 = "0.7.0"
embedded-graphics = "0.8.1"
display-interface-spi = "0.5.0"
heapless = "0.8.0"
serde = "1.0.204"
anyhow = "1.0.86"
embedded-svc = "0.28.0"
serde_json = "1.0.120"
smart-leds = "*"
ws2812-esp32-rmt-driver = { version = "*", features = ["embedded-graphics-core", "smart-leds-trait"] }
# display-interface = "0.5.0"
mipidsi = "0.8.0"

# [dependencies.esp-wifi]
# # A supported chip needs to be specified, as well as specific use-case features
# features = ["esp32c3", "wifi", "esp-now"]
# version = "0.6.0"

[build-dependencies]
embuild = "0.32.0"
anyhow = "1"
